--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   persistent_bottom_nav_bar: ^5.0.2
   shared_preferences: ^2.2.3
   dropdown_button2: ^2.3.9
+  page_route_transition: ^3.1.2
 
 dev_dependencies:
   flutter_test:
