--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   shared_preferences: ^2.2.3
   dropdown_button2: ^2.3.9
   page_route_transition: ^3.1.2
+  path_provider: ^2.1.3
+  audioplayers: ^6.0.0
 
 dev_dependencies:
   flutter_test:
